[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cards/CardFront.png" type="Texture" id=1]
[ext_resource path="res://Font/MainThem.tres" type="Theme" id=2]
[ext_resource path="res://Cards/4_arrows_1.png" type="Texture" id=3]
[ext_resource path="res://Cards/Card.gd" type="Script" id=4]
[ext_resource path="res://Cards/Cardback.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_top = 4.0

[node name="Card" type="Node2D"]
script = ExtResource( 4 )

[node name="CardFront" type="TextureRect" parent="."]
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBack" type="TextureRect" parent="."]
visible = false
margin_right = 110.0
margin_bottom = 187.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardText" type="RichTextLabel" parent="."]
margin_left = 10.5546
margin_top = 139.0
margin_right = 102.555
margin_bottom = 183.445
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Humbel
Hammer[/center]"
text = "Humbel
Hammer"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardImg" type="TextureRect" parent="."]
margin_left = 27.1724
margin_top = 41.4268
margin_right = 87.1724
margin_bottom = 101.427
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="CardFront" to="." method="_on_CardFront_gui_input"]
[connection signal="gui_input" from="CardBack" to="." method="_on_CardBack_gui_input"]
